@@ -701,6 +701,8 @@ item.lotr:bodyBlueDwarven.name=Blue Dwarven Chestplate
 item.lotr:legsBlueDwarven.name=Blue Dwarven Leggings
 item.lotr:bootsBlueDwarven.name=Blue Dwarven Boots
 item.lotr:dwarvenRing.name=Dwarven Marriage Ring
+item.lotr:spearDwarven.name=Dwarven Spear
+item.lotr:spearBlueDwarven.name=Blue Dwarven Spear
 
 item.lotr.drink.weak=Weak
 item.lotr.drink.light=Light
